--- a/templates/speisekarte/speisekarte.twig
+++ b/templates/speisekarte/speisekarte.twig
@@ -14,6 +14,10 @@
             </div>
         </div>
     {% endfor %}
+    <br>
+<div class='text-center'>
+    <a href='#' class='p-5 m-5 text-2xl text-yellow-300 underline font-bold'>Download Speisekarte (PDF)</a>
+</div>
 </div>
 
 {% endblock %}
