done alpha-version

--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,1 +1,21 @@
-Footer
+<div class='bg-red-600 text-yellow-300'>
+    <div class='flex justify-center items-center'>
+        <span class='p-5'>
+            China Restaurant Xin Xin<br>
+            Mustergasse 00<br>
+            8001 Zürich<br>
+            Schweiz
+        </span>
+        <span class='p-5'>
+            Tel.: 044 / 000 00 00<br>
+            <a href=''>E-Mail: info@xinxin-muster.ch</a>
+            <div class='flex'>
+                <img src='/img/icons/fb.png' class='w-10 hover:opacity-40'>
+                <img src='/img/icons/ig.png' class='w-10 hover:opacity-40'>
+                <img src='/img/icons/tw.png' class='w-10 hover:opacity-40'>
+                <img src='/img/icons/wa.png' class='w-10 hover:opacity-40'>
+            </div>
+        </span>
+    <div class='text-center p-5 text-sm text-yellow-300'>© 2023 <a href='https://karingiang.ch/' target='_blank'>Karin Giang</a></div>
+    </div>
+</div>
