--- a/templates/about/about.twig
+++ b/templates/about/about.twig
@@ -2,13 +2,13 @@
 
 {% block body %}
 
-<div class='bg-red-300'>
+<div class='bg-red-300 h-screen'>
     <h1 class='text-center text-6xl font-bold text-yellow-300 underline p-5'>Über uns</h1>
     
         <div class='flex justify-center'>
             <div class='bg-red-400 w-1/2 m-5 p-5 shadow-xl rounded-xl text-yellow-300 text-center'>    
                 <h2 class='text-2xl underline'>Under construction</h2><br>
-                <span>Diese Seite ist zurzeit unter Bearbeitung.</span><br>
+                <span>Diese Seite ist zurzeit in Bearbeitung.</span><br>
             </div>
         </div>
 </div>
