--- a/templates/speisekarte/speisekarte.twig
+++ b/templates/speisekarte/speisekarte.twig
@@ -15,8 +15,8 @@
         </div>
     {% endfor %}
     <br>
-<div class='text-center'>
-    <a href='#' class='p-5 m-5 text-2xl text-yellow-300 underline font-bold'>Download Speisekarte (PDF)</a>
+<div class='text-center p-5'>
+    <a href='#' class='text-2xl text-yellow-300 underline font-bold'>Download Speisekarte (PDF)</a>
 </div>
 </div>
 
