--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,7 +2,7 @@
 
 
 {% block body %}
-<div id='idHome' class="bg-[url('/img/back.jpg')] bg-center bg-no-repeat bg-fixed bg-cover h-screen">
+<div id='idHome' class="bg-[url('{{ asset('img/back.jpg') }}')] bg-center bg-no-repeat bg-fixed bg-cover h-screen">
     <div class='flex justify-center items-center text-center h-screen font-bold text-8xl text-yellow-300'>
         <span>
         China Restaurant
