--- a/templates/speisekarte/speisekarte.twig
+++ b/templates/speisekarte/speisekarte.twig
@@ -7,7 +7,8 @@
     {% for menu in menues %}
         <div class='flex justify-center'>
             <div class='bg-red-400 w-1/2 m-5 p-5 shadow-xl rounded-xl text-yellow-300 text-center'>
-                <img src='/img/menu/{{menu.img}}.jpg' class='float-left w-80 m-3 rounded-xl'>
+                {% set link = menu.img %}
+                <img src='{{ asset(menu.img) }}' class='float-left w-80 m-3 rounded-xl'>
                 <h2 class='text-2xl underline'>{{menu.name}}</h2><br>
                 <span>{{menu.descripe}}</span><br><br>
                 <span class='font-bold'>CHF {{menu.price}}</span>
